[gd_scene load_steps=5 format=3 uid="uid://d2l7ccl3ge7h7"]

[ext_resource type="Texture2D" uid="uid://5ltjgnqs2m0f" path="res://assets/ball.png" id="1_h82lk"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="1_hp35g"]
[ext_resource type="PackedScene" uid="uid://cm6cm3gygou73" path="res://scenes/pickable_area.tscn" id="3_kdo5u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jb7bc"]
radius = 12.0

[node name="Ball" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 25
script = ExtResource("1_hp35g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_h82lk")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jb7bc")

[node name="PickableArea" parent="." instance=ExtResource("3_kdo5u")]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="LabelTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LabelTimer" to="." method="_on_label_timer_timeout"]
